Update MainApp.java